.travis.yml, tests: Update for GO111MODULE=on [ci-skip]
I've flagged this as "[ci-skip]" becausee it finds a legitimate
regression; hold off on fixing that for another commit.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,16 @@ matrix:
     - go: "1.10"
     - go: "1.11"
       env: {GO111MODULE: "off"}
+    - go: "1.11"
+      env: {GO111MODULE: "on"}
     - go: "1.12"
       env: {GO111MODULE: "off"}
+    - go: "1.12"
+      env: {GO111MODULE: "on"}
     - go: "tip"
       env: {GO111MODULE: "off"}
+    - go: "tip"
+      env: {GO111MODULE: "on"}
 
 install: |
   if test -z "$(go env GOMOD)"; then
