--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,14 @@ matrix:
       env: {GO111MODULE: "off"}
     - go: "1.12"
       env: {GO111MODULE: "on"}
+    - go: "1.13"
+      env: {GO111MODULE: "off"}
+    - go: "1.13"
+      env: {GO111MODULE: "on"}
+    - go: "1.14"
+      env: {GO111MODULE: "off"}
+    - go: "1.14"
+      env: {GO111MODULE: "on"}
     - go: "tip"
       env: {GO111MODULE: "off"}
     - go: "tip"
