--- a/.github/workflows/errcheck.yml
+++ b/.github/workflows/errcheck.yml
@@ -13,10 +13,11 @@ jobs:
     env:
       GO111MODULE: 'off'
     steps:
+    - uses: actions/checkout@v2
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: ^1.11
+        go-version: 1.11.13
     - name: Build
       run: go build -v ./...
     - name: Test
@@ -27,10 +28,11 @@ jobs:
     env:
       GO111MODULE: 'on'
     steps:
+    - uses: actions/checkout@v2
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
       with:
-        go-version: ^1.11
+        go-version: 1.11.13
     - name: Build
       run: go build -v ./...
     - name: Test
@@ -41,10 +43,11 @@ jobs:
     env:
       GO111MODULE: 'off'
     steps:
+    - uses: actions/checkout@v2
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: ^1.12
+        go-version: 1.12.17
     - name: Build
       run: go build -v ./...
     - name: Test
@@ -55,10 +58,11 @@ jobs:
     env:
       GO111MODULE: 'on'
     steps:
+    - uses: actions/checkout@v2
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: ^1.12
+        go-version: 1.12.17
     - name: Build
       run: go build -v ./...
     - name: Test
@@ -69,10 +73,11 @@ jobs:
     env:
       GO111MODULE: 'off'
     steps:
+    - uses: actions/checkout@v2
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: ^1.13
+        go-version: 1.13.15
     - name: Build
       run: go build -v ./...
     - name: Test
@@ -83,10 +88,11 @@ jobs:
     env:
       GO111MODULE: 'on'
     steps:
+    - uses: actions/checkout@v2
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: ^1.13
+        go-version: 1.13.15
     - name: Build
       run: go build -v ./...
     - name: Test
@@ -97,10 +103,11 @@ jobs:
     env:
       GO111MODULE: 'off'
     steps:
+    - uses: actions/checkout@v2
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: ^1.14
+        go-version: 1.14.12
     - name: Build
       run: go build -v ./...
     - name: Test
@@ -111,10 +118,11 @@ jobs:
     env:
       GO111MODULE: 'on'
     steps:
+    - uses: actions/checkout@v2
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: ^1.14
+        go-version: 1.14.12
     - name: Build
       run: go build -v ./...
     - name: Test
@@ -125,10 +133,11 @@ jobs:
     env:
       GO111MODULE: 'off'
     steps:
+    - uses: actions/checkout@v2
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: ^1.15
+        go-version: 1.15.6
     - name: Build
       run: go build -v ./...
     - name: Test
@@ -139,10 +148,11 @@ jobs:
     env:
       GO111MODULE: 'on'
     steps:
+    - uses: actions/checkout@v2
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: ^1.15
+        go-version: 1.15.6
     - name: Build
       run: go build -v ./...
     - name: Test
