--- a/.github/workflows/errcheck.yml
+++ b/.github/workflows/errcheck.yml
@@ -24,6 +24,8 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.11.13
+    - name: Go Get
+      run: go get ./...
     - name: Build
       run: go build -v ./...
     - name: Test
@@ -60,6 +62,8 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.12.17
+    - name: Go Get
+      run: go get ./...
     - name: Build
       run: go build -v ./...
     - name: Test
