--- a/.github/workflows/errcheck.yml
+++ b/.github/workflows/errcheck.yml
@@ -7,77 +7,19 @@ on:
     branches: [ master ]
 
 jobs:
-  build_go112:
-    name: 'go 1.12.x'
+  build:
+    strategy:
+      matrix:
+        go: ["1.18.x", "1.19.x", "1.20.x"]
+    name: go ${{ matrix.go }}
     runs-on: ubuntu-latest
-    env:
-      GO111MODULE: 'on'
+
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v4
       with:
-        go-version: 1.12.17
-    - name: Build
-      run: go build -v ./...
-    - name: Test
-      run: go test -v ./...
-  build_go113:
-    name: 'go 1.13.x'
-    runs-on: ubuntu-latest
-    env:
-      GO111MODULE: 'on'
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.13.15
-    - name: Build
-      run: go build -v ./...
-    - name: Test
-      run: go test -v ./...
-  build_go114:
-    name: 'go 1.14.x'
-    runs-on: ubuntu-latest
-    env:
-      GO111MODULE: 'on'
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.14.12
-    - name: Build
-      run: go build -v ./...
-    - name: Test
-      run: go test -v ./...
-  build_go115:
-    name: 'go 1.15.x'
-    runs-on: ubuntu-latest
-    env:
-      GO111MODULE: 'on'
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.15.6
-    - name: Build
-      run: go build -v ./...
-    - name: Test
-      run: go test -v ./...
-  build_go118:
-    name: 'go 1.18.x'
-    runs-on: ubuntu-latest
-    env:
-      GO111MODULE: 'on'
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.18
+        go-version: ${{ matrix.go }}
     - name: Build
       run: go build -v ./...
     - name: Test
